# reprepro

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  aptmethod.c  aptmethod.h  ar.c  ar.h  archallflood.c  archallflood.h  atoms.c  atoms.h  autogen.sh  binaries.c  binaries.h  byhandhook.c  byhandhook.h  changes.c  changes.h  checkin.c  checkin.h  checkindeb.c  checkindeb.h  checkindsc.c  checkindsc.h  checks.c  checks.h  checksums.c  checksums.h  chunkedit.c  (+158 more)
debian/: .git-dpm  README.Debian  changelog  control  copyright  docs  examples  postinst  postrm  preinst  reprepro.doc-base  rules  watch
debian/patches/: 0001-Bump-up-the-maxsize-on-a-fixed-size-C-buffer-to-avoi.patch  0001-include-buildinfo.test-in-tarball.patch  0002-Flush-stdout-stderr-before-calling-endhook.patch  0002-fix-behaviour-of-Deb-Dsc-Indices-without-a-Release-f.patch  0003-Add-Zstd-support.patch  0003-document-what-is-needed-to-use-ask-passphrase-with-n.patch  0004-changelogs.example-be-less-verbose-by-default.patch  0005-add-unreferencesnapshot-and-removereference-commands.patch  0006-document-export-silent-never.patch  0006-testsuite-use-silent-never-instead-of-never-for-expo.patch  0007-document-export-silent-never.patch  bump-buffer-size  flush-streams-before-exec-hook.patch  series
debian/tests/: control  import-hello.sh
debian/upstream/: signing-key.asc
docs/: FAQ  Makefile.am  Makefile.in  bzip.example  changelogs.example  changestool.1  copybyhand.example  manual.html  outsftphook.py  outstore.py  pdiff.example  recovery  reprepro.1  reprepro.bash_completion  reprepro.zsh_completion  rredtool.1  sftp.py  short-howto  tiffany.example  xz.example
docs/di.example/: DI-filter.sh  README  distributions  updates
tests/: .cvsignore  Makefile.am  Makefile.in  atoms.test  bash_unit.inc  basic.sh  brokenuncompressor.sh  brokenunlzma.sh  buildinfo.test  buildneeding.test  check.test  copy.test  debtest.sh  descriptions.test  diffgeneration.test  dpkg-architecture  easyupdate.test  evil.key  expired.key  expiredwithsubkey-working.key  expiredwithsubkey.key  export.test  exporthooks.test  flat.test  flood.test  genpackage.sh  good.key  includeasc.test  includeextra.test  layeredupdate.test  layeredupdate2.test  listcodenames.test  morgue.test  multiversion.sh  onlysmalldeletes.test  override.test  packagediff.test  randomgen.c  randomgen2.c  revoked.key  (+55 more)
tests/old-database/conf/: distributions
tests/old-database/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
