dnl
dnl Process this file with autoconf to produce a configure script
dnl

AC_INIT(main.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mirrorer,0.0)

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_LIB(z,gzopen,,[error "no zlib found"],)

AC_ARG_ENABLE(debug, [  --enable-debug          Activate some switches, that mak
e debugging easier],
[

        debug=yes
        CPPFLAGS="$CPPFLAGS -Wall -g"
],
[debug=no])

AM_CONDITIONAL(DEBUG, test "x$debug" = "xyes")

dnl
dnl Create makefiles
dnl

AC_OUTPUT(Makefile)


