
EXTRA_DIST = short-howto reprepro.1 changestool.1 rredtool.1 recovery bzip.example tiffany.example di.example/README di.example/DI-filter.sh di.example/distributions di.example/updates reprepro.bash_completion reprepro.zsh_completion FAQ changelogs.example manual.html copybyhand.example outstore.py
man_MANS = reprepro.1 changestool.1 rredtool.1
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
