EXTRA_DIST = \
brokenunlzma.sh \
debtest.sh \
dpkg-architecture \
genpackage.sh \
test.inc \
test.sh \
testatoms.sh \
testcheck.sh \
testchecksums.sh \
testexporthooks.sh \
testflat.sh \
testincludeextra.sh \
testlayeredupdate.sh \
testlayeredupdate2.sh \
testpackagediff.sh \
testsignatures.sh \
testsnapshotcopyrestore.sh \
testsubcomponents.sh \
testtemplate.sh \
testtrackingcorruption.sh \
testuncompress.sh \
testupdatecorners.sh \
testvarious1.sh \
testvarious2.sh \
testvarious3.sh \
testverify.sh \
tooltest.sh \
evil.key \
expired.key \
expiredwithsubkey.key \
expiredwithsubkey-working.key \
good.key \
revoked.key \
withsubkeys.key \
withsubkeys-works.key
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
