EXTRA_DIST = \
brokenunlzma.sh \
debtest.sh \
dpkg-architecture \
genpackage.sh \
test.inc \
test.sh \
testatoms.sh \
testcheck.sh \
testchecksums.sh \
testexporthooks.sh \
testflat.sh \
testincludeextra.sh \
testlayeredupdate.sh \
testlayeredupdate2.sh \
testpackagediff.sh \
testsignatures.sh \
testsnapshotcopyrestore.sh \
testsubcomponents.sh \
testtemplate.sh \
testtrackingcorruption.sh \
testuncompress.sh \
testupdatecorners.sh \
testvarious1.sh \
testvarious2.sh \
testvarious3.sh \
tooltest.sh
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
